--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com</groupId>
-    <artifactId>FusionScoutingApp</artifactId>
+    <artifactId>Cypher</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>FusionScoutingApp</name>
+    <name>Cypher</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
